tests/ui/mir/issue-92893.stderr
error: expected expression, found `let` statement
  --> $DIR/issue-92893.rs:1:22
   |
LL | struct Bug<A = [(); (let a = (), 1).1]> {
   |                      ^^^

error: aborting due to previous error

